[gd_scene load_steps=22 format=3 uid="uid://ddjc2n8u45b2p"]

[ext_resource type="Shader" path="res://shaders/hitflash.gdshader" id="1_87kh4"]
[ext_resource type="Script" path="res://scripts/suku.gd" id="2_hstfg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uu40y"]
shader = ExtResource("1_87kh4")
shader_parameter/active = false
shader_parameter/tint = Color(1, 1, 1, 1)
shader_parameter/flash_interval = 0.1

[sub_resource type="AtlasTexture" id="AtlasTexture_4ekgr"]
region = Rect2(168, 0, 168, 168)

[sub_resource type="AtlasTexture" id="AtlasTexture_engvy"]
region = Rect2(336, 0, 168, 168)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph7br"]
region = Rect2(168, 0, 168, 168)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldgb6"]
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_l187a"]
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_87yg8"]
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtcs4"]
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_npj5c"]
region = Rect2(0, 0, 168, 168)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay8tl"]
region = Rect2(168, 0, 168, 168)

[sub_resource type="AtlasTexture" id="AtlasTexture_fixyk"]
region = Rect2(336, 0, 168, 168)

[sub_resource type="AtlasTexture" id="AtlasTexture_evr5v"]
region = Rect2(672, 0, 168, 168)

[sub_resource type="AtlasTexture" id="AtlasTexture_pajee"]
region = Rect2(1008, 0, 168, 168)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcd6p"]
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygf7k"]
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_owpn3"]
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q17q"]
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_jwsiw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ekgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_engvy")
}],
"loop": false,
"name": &"death",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph7br")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldgb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l187a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_87yg8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtcs4")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_npj5c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay8tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fixyk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evr5v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pajee")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcd6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygf7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_owpn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q17q")
}],
"loop": true,
"name": &"run_old",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_telax"]
radius = 15.0
height = 98.0

[node name="Suku" type="CharacterBody2D" groups=["enemy"]]
material = SubResource("ShaderMaterial_uu40y")
position = Vector2(82, 509)
collision_layer = 2
collision_mask = 21
script = ExtResource("2_hstfg")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_uu40y")
position = Vector2(1, -2)
sprite_frames = SubResource("SpriteFrames_jwsiw")
animation = &"run"
autoplay = "run"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
visible = false
texture_filter = 1
material = SubResource("ShaderMaterial_uu40y")
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_jwsiw")
animation = &"run_old"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_telax")

[node name="FlashRecover" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="DirectionUpdate" type="Timer" parent="."]
process_callback = 0
wait_time = 0.8
autostart = true

[node name="StartupSpeedboostDuration" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[connection signal="timeout" from="FlashRecover" to="." method="_on_flash_recover_timeout"]
[connection signal="timeout" from="DirectionUpdate" to="." method="_on_direction_update_timeout"]
[connection signal="timeout" from="StartupSpeedboostDuration" to="." method="_on_startup_speedboost_duration_timeout"]
